fix(bucket): set z-index of developer content

--- a/stacks/spica/src/bucket/pages/index/index.component.scss
+++ b/stacks/spica/src/bucket/pages/index/index.component.scss
@@ -54,6 +54,7 @@
       border-color: var(--primary-400);
     }
     .guide {
+      z-index: 10;
       transition: all 1s;
       position: absolute;
       left: 0px;
